Fix Dropdown Menu Overlapping

--- a/style/styles.css
+++ b/style/styles.css
@@ -3,11 +3,13 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Quando', serif;
+    
 }
 
 html, body {
     max-width: 100%;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -113,7 +115,6 @@ h2 {
     width: 640px;
     position: fixed;
     background-color: #F3CAF1;
-    /*transition: 0.3s ease-out;*/
     transform: translateX(-640px);
     border-right: 10px solid black;
 }
@@ -158,7 +159,7 @@ h2 {
     margin: 15px;
     cursor: pointer;
 }
-#toggle-button {
+#toggle-button, #back-to-top-button {
     display: none;
 }
 #toggle-button:checked ~ .slide-box {
@@ -217,10 +218,34 @@ h2 {
     background: #B7B7B7;
     border-radius: 30px;
 }
+.toggle-full-alt {
+    position: fixed;
+    height: 160px;
+    width: 160px;
+    z-index: 1;
+    left: 25px;
+    top: 40px;
+    border-radius: 30px;
+}
 #toggle-button:checked ~ .toggle-full {
     background: #b7b7b700;
 }
-.toggle-full img {
+.toggle-full .img-menu {
     margin: 15px;
     cursor: pointer;
+}
+.toggle-full-alt .img-menu {
+    margin: 15px;
+    cursor: pointer;
+}
+#toggle-button:not(:checked) ~ .toggle-full-alt img {
+    opacity: 0%;
+}
+#toggle-button:checked ~ .toggle-full img {
+    display: none;
+    visibility: hidden;
+}
+#toggle-button:checked ~ .toggle img {
+    display: none;
+    visibility: hidden;
 }
